--- a/calendar/package.json
+++ b/calendar/package.json
@@ -1,21 +1,30 @@
 {
   "name": "calendar",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "http://PrincessTina.github.io/calendar",
-  "dependencies": {
-    "ajv": "^6.0.0",
-    "ajv-keywords": "3.2.0",
-    "push-dir": "^0.4.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
-  },
+  "version": "1.0.0",
+  "homepage": "http://princesstina.github.io/calendar",
+  "description": "",
+  "author": "PrincessTina",
+  "license": "ISC",
+
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "prod": "node_modules\\.bin\\webpack --mode production",
+    "dev": "node_modules\\.bin\\webpack --mode development"
+  },
+  "dependencies": {
+    "@types/react-dom": "^16.0.6",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-scripts": "^1.1.4"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^4.16.1",
+    "webpack-command": "^0.4.1"
   }
 }
