--- a/calendar/package.json
+++ b/calendar/package.json
@@ -1,11 +1,10 @@
 {
   "name": "calendar",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "homepage": "http://princesstina.github.io/calendar",
   "description": "",
   "author": "PrincessTina",
   "license": "ISC",
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "react-scripts start",
@@ -16,16 +15,20 @@
   },
   "dependencies": {
     "@types/react-dom": "^16.0.6",
+    "less": "^3.7.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "^1.1.4"
+    "react-scripts": "^1.1.4",
+    "webpack": "^4.16.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^4.16.1",
+    "css-loader": "^1.0.0",
+    "less-loader": "^4.1.0",
+    "style-loader": "^0.21.0",
     "webpack-command": "^0.4.1"
   }
 }
