--- a/calendar/package.json
+++ b/calendar/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/react-dom": "^16.0.6",
     "less": "^3.7.1",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "^1.1.4",
