--- a/calendar/package.json
+++ b/calendar/package.json
@@ -30,6 +30,7 @@
     "css-loader": "^1.0.0",
     "less-loader": "^4.1.0",
     "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "webpack-command": "^0.4.1"
   }
 }
