--- a/calendar/package.json
+++ b/calendar/package.json
@@ -20,6 +20,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "^1.1.4",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.16.1"
   },
   "devDependencies": {
